created CSV result class and made some changes